// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toBeNegative > fails when given negative number 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeNegative()[22m

Expected value to not be a negative number received:
  [31m-1[39m"
`;

exports[`.toBeNegative > fails when given Infinity 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNegative()[22m

Expected value to be a negative number received:
  [31mInfinity[39m"
`;

exports[`.toBeNegative > fails when given positive number 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNegative()[22m

Expected value to be a negative number received:
  [31m1[39m"
`;
